# bookops-nypl-platform

./: .flake8  .gitignore  .travis.yml  README.md  dev-requirements.txt  pyproject.toml  pytest.ini  requirements.txt  requirementst-dev.txt
.github/workflows/: test-coverage.yaml  unit-tests.yaml
bookops_nypl_platform/: __init__.py  authorize.py  errors.py  session.py
tests/: conftest.py  test_authorize.py  test_bookops_nypl_platform.py  test_session.py
