[project]
name = "bookops-nypl-platform"
version = "0.5.0"
description = "BookOps Python wrapper around NYPL Platform API"
license = "MIT"
authors = [{name = "Tomasz Kalata", email = "klingaroo@gmail.com"}, {name = "Charlotte Kostelic", email = "charlottekostelic@bookops.org"}]
exclude = ["bookops_nypl_platform/temp.py", "bookops_nypl_platform/temp/*"]
readme = "README.md"
keywords = ["api", "cataloging", "bibliographic records", "library metadata", "nypl"]
requires-python = ">=3.10"
dependencies = ["requests (>=2.24.0)", "types-requests (>=2.28.0)"]

[dependency-groups]
dev = [
    "pytest (>=8.3.3)", 
    "pytest-cov (>=5.0.0)", 
]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = ["webtest: mark a test hitting live endpoints"]
addopts = '-m "not webtest" --cov=bookops_nypl_platform/'

[tool.coverage.run]
relative_files = true
source = ["."]
branch = true
omit = ["tests/*"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
