[project]
name = "bookops-nypl-platform"
version = "0.7.0"
description = "BookOps Python wrapper around NYPL Platform API"
license = "MIT"
authors = [{name = "Tomasz Kalata", email = "klingaroo@gmail.com"}, {name = "Charlotte Kostelic", email = "charlottekostelic@bookops.org"}]
exclude = ["bookops_nypl_platform/temp.py", "bookops_nypl_platform/temp/*"]
readme = "README.md"
keywords = ["api", "cataloging", "bibliographic records", "library metadata", "nypl"]
requires-python = ">=3.10"
dependencies = ["requests (>=2.34.0)", "types-requests (>=2.33.0.20260518)"]

[dependency-groups]
dev = [
    "pytest (>=9.0.3)", 
    "pytest-cov (>=7.1.0)", 
]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = ["webtest: mark a test hitting live endpoints"]
addopts = '-m "not webtest" --cov=bookops_nypl_platform/'

[tool.coverage.run]
branch = true
relative_files = true
source = ["."]
omit = ["tests/*"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["E501", "ANN"]

[tool.ruff.format]
skip-magic-trailing-comma = true